--- a/frontend/src/ToDo8x.css
+++ b/frontend/src/ToDo8x.css
@@ -1,12 +1,19 @@
 .App {
   background-color: #eeeeee;
   padding: 5%;
-  text-align: center;
   height: 100vh;
 }
 
 .todo-heading {
-  font-size: 30px;
+  margin: 0;
+  text-align: left;
+  font-size: 35px;
+}
+
+.todo-username {
+  margin: 10px 0 15px 3px;
+  text-align: left;
+  font-size: 20px;
 }
 
 h1 {
@@ -15,4 +22,18 @@ h1 {
 
 .task {
   margin-bottom: 10px;
+}
+
+.app-heading {
+  display: flex;
+  margin: 0 10px;
+}
+
+.logout-button {
+  margin-top: 10px;
+  margin-left: auto;
+}
+
+.add-task {
+  text-align: center;
 }
