--- a/frontend/src/components/AddTask/addtask.css
+++ b/frontend/src/components/AddTask/addtask.css
@@ -1,17 +1,31 @@
 .addtask-input {
-  width: 90%;
   padding: 10px;
   border: 1px solid #686d76;
   border-radius: 5px;
-  margin-bottom: 10px;
   font-size: 16px;
 }
 
+.addtask {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
 .addtask-main {
-  margin-bottom: 20px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  gap: 10px;
+  padding: 0px 10px;
 }
 
 button {
+  width: fit-content;
+  white-space: nowrap;
+  height: fit-content;
   padding: 9px;
   background-color: #dc5f00;
   color: white;
@@ -19,4 +33,11 @@ button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 14px;
+}
+
+.hr-addtask {
+  border: 0;
+  height: 3px;
+  background-image: linear-gradient(to right, #ff9a9e, #fad0c4);
+  margin: 20px 10px;
 }
