--- a/frontend/src/components/AddTask/addtask.css
+++ b/frontend/src/components/AddTask/addtask.css
@@ -14,12 +14,25 @@
 }
 
 .addtask-main {
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   display: flex;
   gap: 10px;
   padding: 0px 10px;
+}
+
+.addtask-date {
+  padding: 6px;
+  border: 1px solid #686d76;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.addtask-calen-button {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 button {
