--- a/frontend/src/components/TaskCard/taskcard.css
+++ b/frontend/src/components/TaskCard/taskcard.css
@@ -1,18 +1,63 @@
-.task-title {
-  justify-content: space-between;
-  margin: 1%;
-  border: 1px solid black;
+.task-card {
+  margin: 10px;
+  position: relative;
+  display: flex;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f0f0f0;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  overflow: hidden;
+  height: 50px;
 }
 
-.task-title p {
-  margin: 0;
-  padding: 3%;
+.task-card:hover {
+  height: auto;
 }
 
-.task-details p {
-  margin: 0%;
-  margin-left: 2%;
+.task-card__button {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  background-color: #7bac7b;
+  border: none;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.task-card__content {
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 15px;
+  overflow: hidden;
+}
+
+.task-card__title {
+  font-weight: bold;
+}
+
+.task-card__details {
+  opacity: 0;
+  max-height: 0;
+  transition: max-height 0.5s ease-in-out;
+  transform: translateY(-100%);
+}
+
+.task-card:hover .task-card__details {
+  opacity: 1;
+  max-height: 300px; /* Adjust this value as needed */
+  transform: translateY(0);
+}
+
+.task-card__button-delete {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border: none;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
 }
